head fonts, font sizes and spacing between words fixed

--- a/styles/components/_aboutus.scss
+++ b/styles/components/_aboutus.scss
@@ -20,8 +20,8 @@
     }
     &__wrapper--item {
         width: 100%;
-        min-height: 370px;
-        padding: 50px 20px 30px 20px;
+        min-height: 330px;
+        padding: 50px 20px 20px 20px;
         text-align: justify;
     }
     .first {
@@ -34,7 +34,7 @@
     }
     p {
         font-size: 1.5rem;
-        line-height: 2.8rem;
+        line-height: 2.4rem;
     }
     a {
         color: #3D88D1;
