--- a/styles/components/_team.scss
+++ b/styles/components/_team.scss
@@ -67,7 +67,7 @@
             font-size: 1.4rem;
             line-height: 1.8rem;
             margin-block-start: 10px;
-            text-align: justify;
+            text-align: left;
         }
         
     }
