--- a/styles/media_queries/desktop.scss
+++ b/styles/media_queries/desktop.scss
@@ -57,9 +57,13 @@ img {
 }
 /////////about us
 .aboutus {
+
+  p {
+    font-size: 2rem;
+  }
   .second {
       margin-block-start: 50px;
-      height: 380px;
+      height: 360px;
   }
   }
 //////////////////POP-UP MESSAGE
