--- a/styles/media_queries/mobile-l.scss
+++ b/styles/media_queries/mobile-l.scss
@@ -68,11 +68,11 @@
 //////////////////////////ABOUT US
 .aboutus {
     h2 {
-        font-size: 4.2rem;
+        font-size: 4rem;
     }
     p {
-       font-size: 2rem;
-       line-height: 2.8rem; 
+       font-size: 1.8rem;
+       line-height: 2.6rem; 
     }
    
 }
