--- a/styles/media_queries/tablet.scss
+++ b/styles/media_queries/tablet.scss
@@ -184,7 +184,7 @@ footer {
     }
     .second {
         margin-block-start: 50px;
-        height: 470px;
+        height: 400px;
         position: absolute;
         right: 0;
     }
